styles.css
*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
}

html{
     scroll-behavior: smooth;
}

body{
     font-family: 'Segoe UI', sans-serif;
     color: #2e2e2e;
     width: 99vw;
     height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
}

/* Navigation Section */

nav{
     width: 100%;
     height: max-content;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: dimgrey;
     position: sticky;
     top: 0;
     z-index: 1;
}

 nav a{ /* Logo*/
     color: #fff;
     text-decoration: none;
     padding: 1rem;
}

nav ul{
     list-style-type: none;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 2rem;
}

nav ul a{
     text-decoration: none;
     color: #fff;
}


/* Home Page Section */

.home-page{
     width: 100%;
     height: 100vh;
}

.logo-btn{
    display: inline-block;
    background-color: #ff7a00;
    border-radius: 12px;
    padding: 10px 14px;
    text-decoration: none;
    transition: background-color 0.3s ease, transform 0.2s ease;
    color: white;
    font-weight: bold;
    max-height: 50px;
    max-width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 2rem;
  }

  .logo-btn:hover {
    background-color: #e86600;
    transform: scale(1.05);
  }

  .logo {
    display: flex;
    align-items: center;
    justify-content: center;
  }

.marquee-container {
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
     padding: 10px 0;
}

.marquee-content {
     display: inline-block;
     font-size: 22px;
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(90deg, #00ffe0, #ff00c8, #00ffe0);
     background-size: 20% auto;
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: scroll-left 12s linear infinite, shine 3s ease-in-out infinite alternate;
     animation-play-state: running;
}

.marquee-container:hover .marquee-content {
     animation-play-state: paused;
}

@keyframes scroll-left {
     0% {
          transform: translateX(100%);
     }
     100% {
          transform: translateX(-100%);
     }
}

@keyframes shine {
     0% {
          background-position: 0% center;
     }
     100% {
          background-position: 100% center;
     }
}

.home-page .home-details-bg{
     width: 80%;
     height: 80vh;
     margin: auto;
     border-radius: 2rem;
     background-image: url('./images/food-horizontal-cropped.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
}

.home-page .home-details{
     width: 50vw;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
}

.home-page .home-details h5{
     color: #FFF;
     font-weight: 600;
     margin: 5rem 0;
     font-size: 2rem;
}

.home-page .home-details .section-okemwa-recipe-h1{
     display: flex;
     align-items: center;
     font-size: 3rem;
     color: #e86600;
}

.home-search{
     width: 100%;
     height: 100vh;
     background-image: url(./images/meal-plate-horizontal-cropped.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
     color: #fff;
     font-weight: bolder;
     font-size: 2rem;
}

.home-search .only-for-bg{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: first baseline;
     justify-content: flex-end;
     background: linear-gradient(to left, #ff7a00 0%, rgba(255, 122, 0, 0) 100%);
}

.home-search .home-search-flex-div{
     width: 700px;
     display: flex;
     height: 70%;
     flex-direction: column;
     margin: auto 5rem auto 0;
}

.home-search .home-search-flex-div > * {
     margin: 1rem 0;
}

.home-search .search{
     display: flex;
     align-items: center;
     position: relative;
     width: 600px;
     height: 5rem;
     border-radius: 1rem;
     padding: 1rem;
     background-color: #FFF;
}

.home-search .search .search-input{
     display: flex;
     margin-left: 5rem;
     border: none;
     border-radius: 20px;
     outline: none;
     font-size: 2rem;
     width: 100%;
     height: 290%;
     background-color: transparent;
     /* padding-left: 3rem */
}

.home-search .search .search-input:hover{
     outline: transparent;
     background-color: transparent;
}
.home-search .search .meal-search-logo, .home-search .search #searchBtn{
     position: absolute;
     top: .3rem;
     color: black;
     cursor: pointer;
     display: inline-block;
     background-color: #ff7a00;
     border-radius: 12px;
     width: 70px;
     height: 70px;
     /* padding: 10px 14px; */
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.2s ease;
     color: white;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
} 

.home-search .search .meal-search-logo{
     left: .4rem;
}

.home-search .search #searchBtn{
     right: 1rem;
}

  .logo-btn:hover {
    background-color: #e86600;
    transform: scale(1.05);
  }

  .logo {
    display: flex;
    align-items: center;
    justify-content: center;
  }


button{
     cursor: pointer;
}

.navigate{
   width: 90vw;  
   margin-left: 2rem;
}

.navigate a{
     text-decoration: none;
}

.all-meals{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
}

.show-meal {
  width: 350px;
  max-width: 400px;
  margin: 1rem;
  border: 2px solid red;
  /* display: flex;
  flex-direction: column; */
  /* flex: 1; */
  align-items: center;
  padding: 1rem;
  box-sizing: border-box;
  background-color: aquamarine;
  background: #ffffff;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.07);
  border-radius: 12px;
  padding: 1rem;
  border: 1px solid #f1e0c8;
  transition: transform 0.3s;
  animation: fadeIn 2s ease-in forwards;
}

@keyframes fadeIn {
     from{
          opacity: 0;
     }
     to{
          opacity: 1;
     }
}

.show-meal:hover {
  transform: scale(1.02);
  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
}

.meal-name {
  font-size: 1.3rem;
  font-weight: 600;
  color: #3d3d3d;
  border-bottom: 1px dashed #d9d9d9;
  padding-bottom: 0.5rem;
  width: 100%;
  text-align: center;
  margin-bottom: 1rem;
}

.show-meal .meal-img {
  width: 100%;
  object-fit: cover;
  display: block;
  cursor: pointer;
  border: 1px solid #ccc;
  border-radius: 8px;
}

/* .meal-instructions {
  width: 100%;
  flex-grow: 1;    
  overflow-y: auto;    
  font-size: 0.95rem;
  line-height: 2;
  background: #fff3db;
  border-left: 5px solid #e2b76d;
  padding: 1rem;
  border-radius: 8px;
} */

.marquee{
     width: 100%;
     padding: 1rem;
     text-align: center;
}


/* Start Of Meal Details*/

.meal-details{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin: 2rem;
     align-items: start;
}

.meal-details img{
     width: 500px;
     object-fit: contain;
     border-radius: 2rem;
     margin-bottom: 2rem;
}

.meal-details .meal-ingredients ul{
     list-style-type: none;
     padding: 0 1rem 1rem;
}

.meal-details .measure-and-ing ul li{
     padding: .1rem;
     line-height: 2rem;
}

.meal-details .meal-instructions {
     /* width: 550px;
     height: 600px; */
     overflow: auto;
     line-height: 2rem;
}

.meal-details .meal-instructions h1{
     position: sticky;
     top: 0;
     left: 0;
     background-color: #00ffe0;
     width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
}

.meal-details .meal-instructions p{
     line-break: loose;
     padding: 1rem;
}

@media (max-width: 400px) {
     input, button{
          width: 90vw !important;
     }
}

@media (max-width: 600px){
     input, button{
          width: 30vw;
     }
     .meal-details{
          flex-direction: column;
          align-items: center;
     }

     .meal-details img{
          width: 300px;
          margin-bottom: 2rem;
     }
     .meal-details .meal-instructions {
          width: 100%;
          line-height: 2rem;
}
}

@media (max-width: 1200px){
     .meal-details{
          flex-direction: column;
          align-items: center;
     }

     .meal-details img{
          width: 300px;
          margin-bottom: 2rem;
     }
}



/* Start Of Meal Category SPage */
.meal-categories{
     display: flex;
     flex-wrap: wrap;
}

.meal-categories .meal-category h3{
     text-align: center;
     border-bottom: 3px dotted #d9d9d9;
     padding-bottom: .5rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
}

.meal-categories .meal-category{
     display: flex;
     flex-direction: column;
     flex: 1;
     gap: 1rem;
     margin: 1rem;
     box-sizing: border-box;
     background-color: aquamarine;
     background: #ffffff;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.07);
     border-radius: 12px;
     padding: 1rem;
     border: 1px solid #f1e0c8;
     cursor: pointer;
}

.meal-categories .meal-category img{
     border-radius: 2rem;
     object-fit: contain;
     max-width: 600px;
}


footer{
     display: none;
     height: 100px;
     background-image: linear-gradient( 135deg, #FFF3B0 10%, #CA26FF 100%);
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
}

@media screen and (max-width: 450px){
     
input, button{
     padding: 1rem;
     margin: 1rem;
}
}

